--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@apollo/client": "^3.12.2",
     "@apollo/experimental-nextjs-app-support": "^0.11.7",
     "@hookform/resolvers": "^3.9.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@next/env": "^15.1.3",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
